@@ -1,0 +1,14 @@
+<?php
+declare(strict_types=1);
+
+namespace Nexendrie\Menu;
+
+/**
+ * MenuTypeAlreadyDefinedException
+ *
+ * @author Jakub Konečný
+ */
+class MenuTypeAlreadyDefinedException extends \RuntimeException {
+  
+}
+?>
