@@ -1,0 +1,15 @@
+<?php
+declare(strict_types=1);
+
+namespace Nexendrie\Menu;
+
+/**
+ * TemplateNotFoundException
+ *
+ * @author Jakub Konečný
+ */
+class TemplateNotFoundException extends \RuntimeException {
+  
+}
+
+?>
