@@ -1,0 +1,4 @@
+  <nav id="menu">
+    <h3>Menu</h3>
+    <p><a href="plink|Test:">Test</a> <a href="plink|Test:new">New Test</a></p>
+  </nav>
